# When releasing to crates.io:
#
# - last check for all TODO, FIXME, expect, unwrap.
# - re-read and final polish of documentation
# - run cargo udeps
# - run cargo clippy
# - recheck log statements (informative, none left that were just for development, ...)
# - Update CHANGELOG.md.
# - Update version numbers in Cargo.yml, Cargo.toml, install section of readme.
# - verify CI result
# - run cargo test on dependent crates
# - cargo publish
# - merge dev branch into master
# - create git tag with version number
#
[package]
name = "rutils"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2021"
description = ""
repository = "https://github.com/devzbysiu/rutils"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = []
categories = []
homepage = ""
documentation = ""

[dependencies]
clokwerk = { version = "0.4.0", optional = true }
daemonize = { version = "0.5.0", optional = true }
dirs = { version = "5.0.1", optional = true }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
flexi_logger = { version = "0.26.0", optional = true }
log = "0.4.17"
notify-rust = { version = "4.5.8", optional = true }
pretty_env_logger = "0.5.0"
thiserror = "1.0.31"
ureq = { version = "2.4.0", features = ["json"], optional = true }

[features]
default = ["ntfy_notifier", "ifttt_notifier", "desktop_notifier", "daemon", "scheduler", "file_logger"]
ntfy_notifier = ["dep:ureq"]
ifttt_notifier = ["dep:ureq"]
desktop_notifier = ["dep:notify-rust"]
daemon = ["dep:daemonize"]
scheduler = ["dep:clokwerk"]
file_logger = ["dep:flexi_logger", "dep:dirs"]

